--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,134 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6a4536e",
+   "id": "582052da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pptx import Presentation\n",
+    "from pptx.util import Inches, Pt\n",
+    "import openpyxl\n",
+    "\n",
+    "def add_table_slide(presentation, sheet_name, sheet):\n",
+    "    slide = presentation.slides.add_slide(presentation.slide_layouts[5])  # Blank slide\n",
+    "    title = slide.shapes.title\n",
+    "    title.text = f\"Data for {sheet_name}\"\n",
+    "\n",
+    "    # Get the data\n",
+    "    data = [[cell.value for cell in row] for row in sheet.iter_rows(values_only=True)]\n",
+    "    rows, cols = len(data), len(data[0])\n",
+    "\n",
+    "    # Add table\n",
+    "    left = Inches(1.0)\n",
+    "    top = Inches(1.5)\n",
+    "    width = Inches(8.0)\n",
+    "    height = Inches(5.0)\n",
+    "    table = slide.shapes.add_table(rows, cols, left, top, width, height).table\n",
+    "\n",
+    "    # Fill the table with data\n",
+    "    for i, row in enumerate(data):\n",
+    "        for j, value in enumerate(row):\n",
+    "            cell = table.cell(i, j)\n",
+    "            cell.text = str(value) if value else \"\"\n",
+    "            cell.text_frame.paragraphs[0].font.size = Pt(10)\n",
+    "\n",
+    "    # Format header row\n",
+    "    for cell in table.rows[0].cells:\n",
+    "        cell.text_frame.paragraphs[0].font.bold = True\n",
+    "        cell.fill.solid()\n",
+    "        cell.fill.fore_color.rgb = RGBColor(173, 216, 230)  # Light Blue\n",
+    "\n",
+    "def generate_table_ppt(excel_file, ppt_file):\n",
+    "    # Load the Excel workbook\n",
+    "    workbook = openpyxl.load_workbook(excel_file)\n",
+    "    presentation = Presentation()\n",
+    "\n",
+    "    # Iterate through sheets and process data\n",
+    "    for sheet_name in workbook.sheetnames:\n",
+    "        sheet = workbook[sheet_name]\n",
+    "        add_table_slide(presentation, sheet_name, sheet)\n",
+    "\n",
+    "    # Save the PowerPoint\n",
+    "    presentation.save(ppt_file)\n",
+    "    print(f\"PPT saved as {ppt_file}\")\n",
+    "\n",
+    "# Example Usage\n",
+    "input_excel = \"formatted_organization_structure.xlsx\"\n",
+    "output_ppt = \"organization_structure_table.pptx\"\n",
+    "generate_table_ppt(input_excel, output_ppt)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "850e06e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pptx import Presentation\n",
+    "from pptx.enum.shapes import MSO_SHAPE\n",
+    "from pptx.util import Inches, Pt\n",
+    "import openpyxl\n",
+    "\n",
+    "def add_org_chart_slide(presentation, sheet_name, hierarchy):\n",
+    "    slide = presentation.slides.add_slide(presentation.slide_layouts[5])  # Blank slide\n",
+    "    title = slide.shapes.title\n",
+    "    title.text = f\"Organizational Chart: {sheet_name}\"\n",
+    "\n",
+    "    # Add shapes for hierarchy\n",
+    "    top_margin = 1.5  # Inches\n",
+    "    left_margin = 1.0  # Inches\n",
+    "    shape_width = 2.0  # Inches\n",
+    "    shape_height = 1.0  # Inches\n",
+    "    level_gap = 1.5  # Vertical gap between levels\n",
+    "    horizontal_gap = 2.5  # Horizontal gap between shapes\n",
+    "\n",
+    "    # Recursive function to draw hierarchy\n",
+    "    def draw_hierarchy(manager, x, y, slide):\n",
+    "        shape = slide.shapes.add_shape(\n",
+    "            MSO_SHAPE.RECTANGLE,\n",
+    "            Inches(x), Inches(y),\n",
+    "            Inches(shape_width), Inches(shape_height)\n",
+    "        )\n",
+    "        shape.text = manager\n",
+    "        shape.text_frame.paragraphs[0].font.size = Pt(12)\n",
+    "        return shape\n",
+    "\n",
+    "    y = top_margin\n",
+    "    for manager1, sub_hierarchy in hierarchy.items():\n",
+    "        shape1 = draw_hierarchy(manager1, left_margin, y, slide)\n",
+    "        x = left_margin\n",
+    "        for manager2, employees in sub_hierarchy.items():\n",
+    "            y += level_gap\n",
+    "            shape2 = draw_hierarchy(manager2, x + horizontal_gap, y, slide)\n",
+    "            for i, employee in enumerate(employees):\n",
+    "                draw_hierarchy(employee, x + horizontal_gap * (i + 2), y + level_gap, slide)\n",
+    "\n",
+    "def generate_org_chart_ppt(excel_file, ppt_file):\n",
+    "    # Load the Excel workbook\n",
+    "    workbook = openpyxl.load_workbook(excel_file)\n",
+    "    presentation = Presentation()\n",
+    "\n",
+    "    # Iterate through sheets and process data\n",
+    "    for sheet_name in workbook.sheetnames:\n",
+    "        sheet = workbook[sheet_name]\n",
+    "        hierarchy = extract_hierarchy(sheet)\n",
+    "        add_org_chart_slide(presentation, sheet_name, hierarchy)\n",
+    "\n",
+    "    # Save the PowerPoint\n",
+    "    presentation.save(ppt_file)\n",
+    "    print(f\"PPT saved as {ppt_file}\")\n",
+    "\n",
+    "# Example Usage\n",
+    "input_excel = \"formatted_organization_structure.xlsx\"\n",
+    "output_ppt = \"organization_structure_chart.pptx\"\n",
+    "generate_org_chart_ppt(input_excel, output_ppt)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e1b6a52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +218,14 @@
     "# Generate the presentation\n",
     "generate_organizational_ppt(input_excel, output_ppt)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "382ea861",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
