--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "582052da",
+   "id": "47208d85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openpyxl\n",
+    "from openpyxl.styles import Alignment, Font, PatternFill\n",
+    "from openpyxl.utils import get_column_letter\n",
+    "\n",
+    "def format_excel_with_headers(file_path):\n",
+    "    # Load the workbook\n",
+    "    workbook = openpyxl.load_workbook(file_path)\n",
+    "    \n",
+    "    for sheet_name in workbook.sheetnames:\n",
+    "        sheet = workbook[sheet_name]\n",
+    "        \n",
+    "        # Insert the sheet name as a heading in A1\n",
+    "        sheet.insert_rows(1)\n",
+    "        sheet['A1'] = sheet_name\n",
+    "        sheet.merge_cells(start_row=1, start_column=1, end_row=1, end_column=sheet.max_column)\n",
+    "        sheet['A1'].font = Font(size=14, bold=True)\n",
+    "        sheet['A1'].alignment = Alignment(horizontal=\"center\", vertical=\"center\")\n",
+    "        sheet['A1'].fill = PatternFill(start_color=\"B0C4DE\", end_color=\"B0C4DE\", fill_type=\"solid\")  # Light Blue\n",
+    "        \n",
+    "        # Apply formatting to the header row (now at row 2)\n",
+    "        header_row = 2\n",
+    "        for col in range(1, sheet.max_column + 1):\n",
+    "            cell = sheet.cell(row=header_row, column=col)\n",
+    "            cell.font = Font(bold=True)\n",
+    "            cell.fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")  # Light Blue\n",
+    "            cell.alignment = Alignment(horizontal=\"center\", vertical=\"center\")\n",
+    "        \n",
+    "        # Set column widths\n",
+    "        for col in range(1, sheet.max_column + 1):\n",
+    "            max_length = 0\n",
+    "            column = get_column_letter(col)\n",
+    "            for row in range(1, sheet.max_row + 1):\n",
+    "                cell = sheet[f\"{column}{row}\"]\n",
+    "                try:\n",
+    "                    if cell.value:\n",
+    "                        max_length = max(max_length, len(str(cell.value)))\n",
+    "                except Exception:\n",
+    "                    pass\n",
+    "            adjusted_width = max_length + 2\n",
+    "            sheet.column_dimensions[column].width = adjusted_width\n",
+    "\n",
+    "    # Save the updated workbook\n",
+    "    workbook.save(file_path)\n",
+    "    print(f\"Workbook formatted and saved at: {file_path}\")\n",
+    "\n",
+    "# Example Usage\n",
+    "file_path = \"organization_structure.xlsx\"\n",
+    "format_excel_with_headers(file_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91098aaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "850e06e5",
+   "id": "69c5fe3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e1b6a52",
+   "id": "4980e930",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "382ea861",
+   "id": "a4364122",
    "metadata": {},
    "outputs": [],
    "source": []
