--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,66 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a8d4adc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import datetime\n",
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.styles import PatternFill\n",
+    "\n",
+    "# Function to adjust dates and highlight changes\n",
+    "def adjust_and_highlight_dates(input_file, output_file):\n",
+    "    # Read the Excel file into a dataframe\n",
+    "    df = pd.read_excel(input_file)\n",
+    "\n",
+    "    # Get today's date and current month/year\n",
+    "    today = datetime.datetime.today()\n",
+    "    current_year = today.year\n",
+    "    current_month = today.month\n",
+    "\n",
+    "    # Convert the Date column to datetime\n",
+    "    df['Date'] = pd.to_datetime(df['Date'], format='%d-%m-%Y', errors='coerce')\n",
+    "\n",
+    "    # Track rows with updated dates\n",
+    "    updated_rows = []\n",
+    "\n",
+    "    for index, row in df.iterrows():\n",
+    "        date = row['Date']\n",
+    "        if pd.notna(date):\n",
+    "            if date.year != current_year or date.month < current_month:\n",
+    "                # Update date to the last day of the current month\n",
+    "                last_day_of_month = datetime.date(current_year, current_month, 1).replace(day=28) + datetime.timedelta(days=4)\n",
+    "                last_day_of_month = last_day_of_month - datetime.timedelta(days=last_day_of_month.day - 1)\n",
+    "                df.at[index, 'Date'] = last_day_of_month\n",
+    "                updated_rows.append(index)\n",
+    "\n",
+    "    # Save the updated dataframe to the same Excel file\n",
+    "    df.to_excel(output_file, index=False)\n",
+    "\n",
+    "    # Open the workbook to apply formatting\n",
+    "    wb = load_workbook(output_file)\n",
+    "    ws = wb.active\n",
+    "\n",
+    "    # Highlight updated rows in yellow\n",
+    "    yellow_fill = PatternFill(start_color=\"FFFF00\", end_color=\"FFFF00\", fill_type=\"solid\")\n",
+    "    for row_idx in updated_rows:\n",
+    "        cell = ws[f'A{row_idx + 2}']  # Assuming 'Date' is in column A; adjust as needed\n",
+    "        cell.fill = yellow_fill\n",
+    "\n",
+    "    wb.save(output_file)\n",
+    "    print(\"Dates adjusted and highlighted where necessary.\")\n",
+    "\n",
+    "# Example usage\n",
+    "input_file = \"input_dates.xlsx\"  # Replace with your file path\n",
+    "output_file = \"output_dates.xlsx\"\n",
+    "adjust_and_highlight_dates(input_file, output_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "47208d85",
    "metadata": {},
    "outputs": [],
