--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8d4adc1",
+   "id": "8cc39a36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,20 +25,24 @@
     "    # Convert the Date column to datetime\n",
     "    df['Date'] = pd.to_datetime(df['Date'], format='%d-%m-%Y', errors='coerce')\n",
     "\n",
-    "    # Track rows with updated dates\n",
+    "    # Preserve the original dates in a new column\n",
+    "    df['Original Date'] = df['Date']\n",
+    "\n",
+    "    # Initialize a list to track changed rows\n",
     "    updated_rows = []\n",
     "\n",
+    "    # Iterate through the dataframe and update dates if necessary\n",
     "    for index, row in df.iterrows():\n",
-    "        date = row['Date']\n",
-    "        if pd.notna(date):\n",
-    "            if date.year != current_year or date.month < current_month:\n",
+    "        original_date = row['Original Date']\n",
+    "        if pd.notna(original_date):\n",
+    "            if original_date.year != current_year or original_date.month < current_month:\n",
     "                # Update date to the last day of the current month\n",
     "                last_day_of_month = datetime.date(current_year, current_month, 1).replace(day=28) + datetime.timedelta(days=4)\n",
     "                last_day_of_month = last_day_of_month - datetime.timedelta(days=last_day_of_month.day - 1)\n",
     "                df.at[index, 'Date'] = last_day_of_month\n",
     "                updated_rows.append(index)\n",
     "\n",
-    "    # Save the updated dataframe to the same Excel file\n",
+    "    # Save the updated dataframe to the Excel file\n",
     "    df.to_excel(output_file, index=False)\n",
     "\n",
     "    # Open the workbook to apply formatting\n",
@@ -48,8 +52,8 @@
     "    # Highlight updated rows in yellow\n",
     "    yellow_fill = PatternFill(start_color=\"FFFF00\", end_color=\"FFFF00\", fill_type=\"solid\")\n",
     "    for row_idx in updated_rows:\n",
-    "        cell = ws[f'A{row_idx + 2}']  # Assuming 'Date' is in column A; adjust as needed\n",
-    "        cell.fill = yellow_fill\n",
+    "        for col_idx in range(1, len(df.columns) + 1):  # Apply yellow to the entire row\n",
+    "            ws.cell(row=row_idx + 2, column=col_idx).fill = yellow_fill\n",
     "\n",
     "    wb.save(output_file)\n",
     "    print(\"Dates adjusted and highlighted where necessary.\")\n",
