--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,64 +3,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cc39a36",
+   "id": "b337496b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import datetime\n",
+    "import calendar\n",
     "from openpyxl import load_workbook\n",
     "from openpyxl.styles import PatternFill\n",
     "\n",
-    "# Function to adjust dates and highlight changes\n",
     "def adjust_and_highlight_dates(input_file, output_file):\n",
     "    # Read the Excel file into a dataframe\n",
     "    df = pd.read_excel(input_file)\n",
     "\n",
-    "    # Get today's date and current month/year\n",
+    "    # Get today's date, current year, and current month\n",
     "    today = datetime.datetime.today()\n",
     "    current_year = today.year\n",
     "    current_month = today.month\n",
     "\n",
-    "    # Convert the Date column to datetime\n",
+    "    # Convert the Date column to datetime format\n",
     "    df['Date'] = pd.to_datetime(df['Date'], format='%d-%m-%Y', errors='coerce')\n",
     "\n",
-    "    # Preserve the original dates in a new column\n",
+    "    # Preserve the original dates for comparison\n",
     "    df['Original Date'] = df['Date']\n",
     "\n",
-    "    # Initialize a list to track changed rows\n",
-    "    updated_rows = []\n",
+    "    # Initialize a list to track rows where dates were updated\n",
+    "    updated_cells = []\n",
     "\n",
     "    # Iterate through the dataframe and update dates if necessary\n",
     "    for index, row in df.iterrows():\n",
     "        original_date = row['Original Date']\n",
-    "        if pd.notna(original_date):\n",
+    "        if pd.notna(original_date):  # Ensure the date is valid\n",
+    "            # Check if the year is not current or the month is before the current month\n",
     "            if original_date.year != current_year or original_date.month < current_month:\n",
-    "                # Update date to the last day of the current month\n",
-    "                last_day_of_month = datetime.date(current_year, current_month, 1).replace(day=28) + datetime.timedelta(days=4)\n",
-    "                last_day_of_month = last_day_of_month - datetime.timedelta(days=last_day_of_month.day - 1)\n",
-    "                df.at[index, 'Date'] = last_day_of_month\n",
-    "                updated_rows.append(index)\n",
+    "                # Get the last day of the current month\n",
+    "                last_day_of_month = datetime.date(current_year, current_month, calendar.monthrange(current_year, current_month)[1])\n",
+    "                df.at[index, 'Date'] = last_day_of_month  # Update the date\n",
+    "                updated_cells.append(index + 2)  # Track row index for Excel (offset by 2 for header)\n",
     "\n",
     "    # Save the updated dataframe to the Excel file\n",
+    "    df.drop(columns=['Original Date'], inplace=True)  # Drop the 'Original Date' column if not needed\n",
     "    df.to_excel(output_file, index=False)\n",
     "\n",
     "    # Open the workbook to apply formatting\n",
     "    wb = load_workbook(output_file)\n",
     "    ws = wb.active\n",
     "\n",
-    "    # Highlight updated rows in yellow\n",
+    "    # Apply yellow highlight to updated cells in the \"Date\" column\n",
     "    yellow_fill = PatternFill(start_color=\"FFFF00\", end_color=\"FFFF00\", fill_type=\"solid\")\n",
-    "    for row_idx in updated_rows:\n",
-    "        for col_idx in range(1, len(df.columns) + 1):  # Apply yellow to the entire row\n",
-    "            ws.cell(row=row_idx + 2, column=col_idx).fill = yellow_fill\n",
+    "    for row_idx in updated_cells:\n",
+    "        ws.cell(row=row_idx, column=2).fill = yellow_fill  # Column 2 corresponds to the 'Date' column\n",
     "\n",
     "    wb.save(output_file)\n",
     "    print(\"Dates adjusted and highlighted where necessary.\")\n",
     "\n",
     "# Example usage\n",
-    "input_file = \"input_dates.xlsx\"  # Replace with your file path\n",
-    "output_file = \"output_dates.xlsx\"\n",
+    "input_file = \"input_dates.xlsx\"  # Replace with your input file\n",
+    "output_file = \"output_dates.xlsx\"  # Replace with your output file\n",
     "adjust_and_highlight_dates(input_file, output_file)\n"
    ]
   },
