--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b337496b",
+   "id": "aa104d91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,8 @@
     "    # Preserve the original dates for comparison\n",
     "    df['Original Date'] = df['Date']\n",
     "\n",
-    "    # Initialize a list to track rows where dates were updated\n",
-    "    updated_cells = []\n",
+    "    # Track indices where dates are updated\n",
+    "    updated_rows = []\n",
     "\n",
     "    # Iterate through the dataframe and update dates if necessary\n",
     "    for index, row in df.iterrows():\n",
@@ -40,7 +40,7 @@
     "                # Get the last day of the current month\n",
     "                last_day_of_month = datetime.date(current_year, current_month, calendar.monthrange(current_year, current_month)[1])\n",
     "                df.at[index, 'Date'] = last_day_of_month  # Update the date\n",
-    "                updated_cells.append(index + 2)  # Track row index for Excel (offset by 2 for header)\n",
+    "                updated_rows.append(index + 2)  # Add row index for Excel (offset by 2 for header)\n",
     "\n",
     "    # Save the updated dataframe to the Excel file\n",
     "    df.drop(columns=['Original Date'], inplace=True)  # Drop the 'Original Date' column if not needed\n",
@@ -52,9 +52,10 @@
     "\n",
     "    # Apply yellow highlight to updated cells in the \"Date\" column\n",
     "    yellow_fill = PatternFill(start_color=\"FFFF00\", end_color=\"FFFF00\", fill_type=\"solid\")\n",
-    "    for row_idx in updated_cells:\n",
+    "    for row_idx in updated_rows:\n",
     "        ws.cell(row=row_idx, column=2).fill = yellow_fill  # Column 2 corresponds to the 'Date' column\n",
     "\n",
+    "    # Save the workbook\n",
     "    wb.save(output_file)\n",
     "    print(\"Dates adjusted and highlighted where necessary.\")\n",
     "\n",
