--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa104d91",
+   "id": "f69b8489",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,6 @@
     "    # Preserve the original dates for comparison\n",
     "    df['Original Date'] = df['Date']\n",
     "\n",
-    "    # Track indices where dates are updated\n",
-    "    updated_rows = []\n",
-    "\n",
     "    # Iterate through the dataframe and update dates if necessary\n",
     "    for index, row in df.iterrows():\n",
     "        original_date = row['Original Date']\n",
@@ -40,24 +37,24 @@
     "                # Get the last day of the current month\n",
     "                last_day_of_month = datetime.date(current_year, current_month, calendar.monthrange(current_year, current_month)[1])\n",
     "                df.at[index, 'Date'] = last_day_of_month  # Update the date\n",
-    "                updated_rows.append(index + 2)  # Add row index for Excel (offset by 2 for header)\n",
     "\n",
     "    # Save the updated dataframe to the Excel file\n",
-    "    df.drop(columns=['Original Date'], inplace=True)  # Drop the 'Original Date' column if not needed\n",
     "    df.to_excel(output_file, index=False)\n",
     "\n",
     "    # Open the workbook to apply formatting\n",
     "    wb = load_workbook(output_file)\n",
     "    ws = wb.active\n",
     "\n",
-    "    # Apply yellow highlight to updated cells in the \"Date\" column\n",
+    "    # Apply yellow highlight to cells in the \"Date\" column where changes were made\n",
     "    yellow_fill = PatternFill(start_color=\"FFFF00\", end_color=\"FFFF00\", fill_type=\"solid\")\n",
-    "    for row_idx in updated_rows:\n",
-    "        ws.cell(row=row_idx, column=2).fill = yellow_fill  # Column 2 corresponds to the 'Date' column\n",
+    "    for index, row in df.iterrows():\n",
+    "        if row['Original Date'] != row['Date']:  # Compare original and updated date\n",
+    "            excel_row = index + 2  # Offset for Excel's 1-based index and header row\n",
+    "            ws.cell(row=excel_row, column=2).fill = yellow_fill  # Column 2 corresponds to the 'Date' column\n",
     "\n",
-    "    # Save the workbook\n",
+    "    # Save the workbook with highlighted changes\n",
     "    wb.save(output_file)\n",
-    "    print(\"Dates adjusted and highlighted where necessary.\")\n",
+    "    print(\"Dates adjusted and changes highlighted where necessary.\")\n",
     "\n",
     "# Example usage\n",
     "input_file = \"input_dates.xlsx\"  # Replace with your input file\n",
