--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,125 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f69b8489",
+   "id": "39930ec2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import math\n",
+    "import datetime\n",
+    "\n",
+    "# Example source data\n",
+    "data = {\n",
+    "    \"FTE\": [6.5, -12.3, 3, 0, None, 10],\n",
+    "    \"Type\": [\"BC-TT\", \"Investments\", \"Saves\", \"Other\", \"Saves\", \"BC-TT\"],\n",
+    "    \"GM\": [0, 0, 0, 0, 0, 1],\n",
+    "    \"MD\": [0, 0, 0, 0, 0, 0],\n",
+    "    \"3\": [0, 0, 0, 0, 0, 2],\n",
+    "    \"4\": [2.5, -4, 0, 0, 0, 0],\n",
+    "    \"5\": [0, 0, 0, 0, 0, 0],\n",
+    "    \"6\": [3, -6, 0, 0, 0, 3],\n",
+    "    \"7\": [1, -1, 1, 0, 0, 4],\n",
+    "    \"8\": [0, -1.3, 0, 0, 0, 0],\n",
+    "    \"Entity\": [\"Entity1\", \"Entity2\", \"Entity3\", \"Entity4\", \"Entity5\", \"Entity6\"],\n",
+    "    \"Description\": [\"Example 1\", \"Example 2\", \"Example 3\", \"Example 4\", \"Example 5\", \"Example 6\"],\n",
+    "    \"Country\": [\"Country1\", \"Country2\", \"Country3\", \"Country4\", \"Country5\", \"Country6\"],\n",
+    "    \"RTN\": [\"RTN 123 - Example\", \"RTN 456 - Sample\", \"RTN 789 - Test\", \"RTN 101 - Case\", \"RTN 112 - Trial\", \"RTN 113 - Check\"]\n",
+    "}\n",
+    "\n",
+    "source_df = pd.DataFrame(data)\n",
+    "\n",
+    "# Columns to check for GCB values\n",
+    "gcb_columns = [\"GM\", \"MD\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\"]\n",
+    "\n",
+    "# Clean and convert FTE column\n",
+    "source_df[\"FTE\"] = pd.to_numeric(source_df[\"FTE\"], errors=\"coerce\")\n",
+    "\n",
+    "# Filter rows where FTE is valid and does not equal 0\n",
+    "filtered_df = source_df[\n",
+    "    source_df[\"FTE\"].notnull() & (source_df[\"FTE\"] != 0) & (source_df.get(\"Type\", \"\").isin([\"BC-TT\", \"Investments\", \"Saves\"]))\n",
+    "]\n",
+    "\n",
+    "# Create the template dataframe with required columns\n",
+    "template_columns = [\n",
+    "    \"Big Grid Stack\", \"AOP YEAR\", \"Business Framework RTN Code\",\n",
+    "    \"Business Framework\", \"Business Framework Group\", \"Country\",\n",
+    "    \"GCB\", \"Emp. Type\", \"Hiring Source\", \"FTE\", \"Start Month\",\n",
+    "    \"WPB\", \"GBM\", \"CMB\", \"Diver\", \"Entity\", \"Description\"\n",
+    "]\n",
+    "template_df = pd.DataFrame(columns=template_columns)\n",
+    "\n",
+    "# Process each row in the filtered dataframe\n",
+    "for _, row in filtered_df.iterrows():\n",
+    "    fte_value = row[\"FTE\"]\n",
+    "    duplicate_fte = -1 if fte_value < 0 else 1  # Determine positive or negative FTE\n",
+    "    abs_fte = abs(fte_value)\n",
+    "    int_part = math.floor(abs_fte)  # Integer part of FTE\n",
+    "    fractional_part = abs_fte - int_part  # Fractional part of FTE\n",
+    "\n",
+    "    # Calculate GCB distribution\n",
+    "    gcb_distribution = []\n",
+    "    for col in gcb_columns:\n",
+    "        value = pd.to_numeric(row.get(col), errors=\"coerce\")  # Convert to numeric, handle non-numeric gracefully\n",
+    "        if not pd.isna(value) and value != 0:\n",
+    "            gcb_distribution.extend([col] * abs(math.ceil(value)))\n",
+    "\n",
+    "    # Ensure GCB distribution matches the FTE rows\n",
+    "    total_required_rows = int_part + (1 if fractional_part > 0 else 0)\n",
+    "    if len(gcb_distribution) < total_required_rows:\n",
+    "        gcb_distribution.extend([\"na\"] * (total_required_rows - len(gcb_distribution)))\n",
+    "\n",
+    "    # Dynamically calculate Start Month\n",
+    "    current_year = 2025\n",
+    "    if fte_value > 0:\n",
+    "        start_month = datetime.date(current_year, 1, 31)  # Example logic for positive FTE\n",
+    "    elif fte_value < 0:\n",
+    "        start_month = datetime.date(current_year, 2, 28)  # Example logic for negative FTE\n",
+    "    else:\n",
+    "        start_month = datetime.date(current_year, 12, 31)  # Default fallback\n",
+    "\n",
+    "    # Create rows in the template\n",
+    "    for i in range(total_required_rows):\n",
+    "        current_fte = (\n",
+    "            fractional_part if i == total_required_rows - 1 and fractional_part > 0 else 1\n",
+    "        ) * duplicate_fte\n",
+    "\n",
+    "        big_grid_stack = (\n",
+    "            \"New Perm Position (within FRP) - Staff Drawdown\" if current_fte > 0\n",
+    "            else \"Forecast program/Other Saves-Saves Forecast Tracker\"\n",
+    "        )\n",
+    "        if row.get(\"Type\") == \"BC-TT\":\n",
+    "            big_grid_stack = \"Inter Boundary Changes\"\n",
+    "\n",
+    "        new_row = {\n",
+    "            \"Big Grid Stack\": big_grid_stack,\n",
+    "            \"AOP YEAR\": \"FY25\",\n",
+    "            \"Business Framework RTN Code\": row[\"RTN\"].split()[0],\n",
+    "            \"Business Framework\": \"\",\n",
+    "            \"Business Framework Group\": \"\",\n",
+    "            \"Country\": row.get(\"Country\", \"\"),\n",
+    "            \"GCB\": gcb_distribution[i],\n",
+    "            \"Emp. Type\": \"FTE\",\n",
+    "            \"Hiring Source\": \"External\",\n",
+    "            \"FTE\": current_fte,\n",
+    "            \"Start Month\": start_month.strftime(\"%m/%d/%Y\"),\n",
+    "            \"WPB\": \"0%\",\n",
+    "            \"GBM\": \"100.00%\",\n",
+    "            \"CMB\": \"0%\",\n",
+    "            \"Diver\": \"\",\n",
+    "            \"Entity\": row.get(\"Entity\", \"\"),\n",
+    "            \"Description\": row.get(\"Description\", \"No description available\"),\n",
+    "        }\n",
+    "        template_df = pd.concat([template_df, pd.DataFrame([new_row])], ignore_index=True)\n",
+    "\n",
+    "# Output the result\n",
+    "print(template_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a34e3dd9",
    "metadata": {},
    "outputs": [],
    "source": [
