--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,88 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39930ec2",
+   "id": "87a430fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from openpyxl.styles import PatternFill\n",
+    "from openpyxl import load_workbook\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# Define the yellow fill for highlighting\n",
+    "yellow_fill = PatternFill(start_color=\"FFFF00\", end_color=\"FFFF00\", fill_type=\"solid\")\n",
+    "\n",
+    "# Load your Excel file\n",
+    "file_path = \"your_file.xlsx\"\n",
+    "df = pd.read_excel(file_path)\n",
+    "wb = load_workbook(file_path)\n",
+    "ws = wb.active\n",
+    "\n",
+    "# Ensure all expected columns are present\n",
+    "required_columns = ['Original Date', 'Date', 'Type', 'Description']  # Add more columns as needed\n",
+    "for col in required_columns:\n",
+    "    if col not in df.columns:\n",
+    "        df[col] = \"\"  # Add missing columns with blank values\n",
+    "\n",
+    "# Function to safely convert date values\n",
+    "def safe_convert_date(date_value):\n",
+    "    if pd.isnull(date_value):  # Handle missing values\n",
+    "        return None\n",
+    "    if isinstance(date_value, datetime):  # Already a datetime object\n",
+    "        return date_value\n",
+    "    if isinstance(date_value, str):  # Try parsing strings\n",
+    "        for fmt in (\"%d/%m/%Y\", \"%Y-%m-%d\", \"%m/%d/%Y\"):  # Common date formats\n",
+    "            try:\n",
+    "                return datetime.strptime(date_value, fmt)\n",
+    "            except ValueError:\n",
+    "                continue\n",
+    "    return None  # Return None if conversion fails\n",
+    "\n",
+    "# Ensure Date and Original Date are in proper datetime format\n",
+    "if 'Date' in df.columns:\n",
+    "    df['Date'] = df['Date'].apply(safe_convert_date)\n",
+    "if 'Original Date' in df.columns:\n",
+    "    df['Original Date'] = df['Original Date'].apply(safe_convert_date)\n",
+    "\n",
+    "# Function to process Date changes\n",
+    "def process_dates(row, current_date):\n",
+    "    original_date = row.get('Original Date')\n",
+    "    date = row.get('Date')\n",
+    "    \n",
+    "    # Check if dates are valid\n",
+    "    if pd.isna(date) or (original_date and (original_date.year < current_date.year or original_date.month < current_date.month)):\n",
+    "        return current_date.replace(day=1) - pd.Timedelta(days=1)  # Last day of current month\n",
+    "    return date\n",
+    "\n",
+    "# Get today's date\n",
+    "today = pd.Timestamp.now()\n",
+    "current_month_last_date = today.replace(day=1) + pd.offsets.MonthEnd(0)\n",
+    "\n",
+    "# Apply logic to update Date column and highlight changes\n",
+    "for index, row in df.iterrows():\n",
+    "    updated_date = process_dates(row, current_month_last_date)\n",
+    "    if updated_date != row['Date']:  # Track changes\n",
+    "        df.at[index, 'Date'] = updated_date\n",
+    "        ws.cell(row=index + 2, column=df.columns.get_loc('Date') + 1).value = updated_date  # Update cell value\n",
+    "        ws.cell(row=index + 2, column=df.columns.get_loc('Date') + 1).fill = yellow_fill  # Highlight updated cell\n",
+    "\n",
+    "# Handle 'Type' and 'Description' specific logic only if the columns exist\n",
+    "if 'Type' in df.columns:\n",
+    "    # Example logic for 'Type'\n",
+    "    df['Type'] = df['Type'].apply(lambda x: x.upper() if pd.notna(x) else \"\")\n",
+    "if 'Description' in df.columns:\n",
+    "    # Example logic for 'Description'\n",
+    "    df['Description'] = df['Description'].fillna(\"No description available\")\n",
+    "\n",
+    "# Save the updated Excel file\n",
+    "wb.save(\"updated_file.xlsx\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1e945c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a34e3dd9",
+   "id": "d2ee32c9",
    "metadata": {},
    "outputs": [],
    "source": [
