--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,85 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "13df3081",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "# Define input and output file paths\n",
+    "input_folder = \"Input\"\n",
+    "input_file = os.path.join(input_folder, \"your_excel_file.xlsx\")  # Replace with actual filename\n",
+    "output_file = \"JML_Report.xlsx\"\n",
+    "\n",
+    "# Read the Excel file\n",
+    "df = pd.read_excel(input_file, sheet_name=\"Headcount Employee Detail\", dtype=str)  # Read everything as text\n",
+    "\n",
+    "# Filter only \"Central Managed Services\"\n",
+    "df_cms = df[df[\"BF Level 2 Name\"] == \"Central Managed Services\"].copy()\n",
+    "\n",
+    "# Initialize columns for tracking manager levels\n",
+    "manager_cols = [\"Check\", \"Manager\", \"Check2\", \"Manager2\", \"Check3\", \"Manager3\", \"Check4\", \"Manager4\", \"Check5\", \"Manager5\", \"Check6\"]\n",
+    "\n",
+    "# Add empty columns\n",
+    "for col in manager_cols:\n",
+    "    df_cms[col] = \"\"\n",
+    "\n",
+    "# Create a dictionary for fast lookups (Employee ID → [Manager ID, BF Level])\n",
+    "lookup_dict = df.set_index(\"Employee ID\")[[\"Functional Manager Employee ID\", \"BF Level 2 Name\"]].to_dict(orient=\"index\")\n",
+    "\n",
+    "# Function to track hierarchy up to 5 levels\n",
+    "def track_manager_hierarchy(emp_id):\n",
+    "    manager_data = {\"Check\": \"\", \"Manager\": \"\", \"Check2\": \"\", \"Manager2\": \"\", \"Check3\": \"\", \"Manager3\": \"\", \"Check4\": \"\", \"Manager4\": \"\", \"Check5\": \"\", \"Manager5\": \"\", \"Check6\": \"\"}\n",
+    "    current_emp = emp_id\n",
+    "\n",
+    "    for i in range(1, 7):  # Loop for levels 1 to 6\n",
+    "        if current_emp in lookup_dict:\n",
+    "            manager_id = lookup_dict[current_emp][\"Functional Manager Employee ID\"]\n",
+    "            bf_level = lookup_dict[current_emp][\"BF Level 2 Name\"]\n",
+    "\n",
+    "            # Save in corresponding columns\n",
+    "            if i == 1:\n",
+    "                manager_data[\"Check\"] = bf_level\n",
+    "                manager_data[\"Manager\"] = manager_id\n",
+    "            else:\n",
+    "                manager_data[f\"Check{i}\"] = bf_level\n",
+    "                manager_data[f\"Manager{i}\"] = manager_id\n",
+    "            \n",
+    "            # Move up the hierarchy\n",
+    "            current_emp = manager_id\n",
+    "        else:\n",
+    "            break  # Stop if no manager found\n",
+    "\n",
+    "    return pd.Series(manager_data)\n",
+    "\n",
+    "# Apply the function to populate manager levels\n",
+    "df_cms[manager_cols] = df_cms[\"Employee ID\"].apply(track_manager_hierarchy)\n",
+    "\n",
+    "# Identify rows where any \"Check\" column has 'Finance'\n",
+    "df_cms[\"Updated BF Level2\"] = df_cms[[\"Check\", \"Check2\", \"Check3\", \"Check4\", \"Check5\", \"Check6\"]].apply(lambda x: \"CMS Finance\" if \"Finance\" in x.values else \"\", axis=1)\n",
+    "\n",
+    "# Keep only relevant rows\n",
+    "cms_df = df_cms[df_cms[\"Updated BF Level2\"] == \"CMS Finance\"]\n",
+    "\n",
+    "# Read Finance rows from original file\n",
+    "df_finance = df[df[\"BF Level 2 Name\"] == \"Finance\"].copy()\n",
+    "df_finance[\"Updated BF Level2\"] = \"Finance\"\n",
+    "\n",
+    "# Append cms_df rows to finance rows\n",
+    "final_df = pd.concat([df_finance, cms_df], ignore_index=True)\n",
+    "\n",
+    "# Save to a new Excel file with sheet name \"JML Report\"\n",
+    "with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
+    "    final_df.to_excel(writer, sheet_name=\"JML Report\", index=False)\n",
+    "\n",
+    "print(\"✅ JML Report generated successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "87a430fa",
    "metadata": {},
    "outputs": [],
