--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fc5dc75f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load Files\n",
+    "output_file = pd.read_excel('Output.xlsx', sheet_name='Sheet1')\n",
+    "input_file = pd.read_excel('Input.xlsx', sheet_name='Sheet1')\n",
+    "mapping_file = pd.ExcelFile('Mapping.xlsx')\n",
+    "ospd_file = pd.read_excel('OSPD.xlsb', sheet_name='CC-List')\n",
+    "\n",
+    "# Load Mapping Sheets\n",
+    "gr_mapping = mapping_file.parse('GR')\n",
+    "anaplan_mapping = mapping_file.parse('Anaplan')\n",
+    "country_mapping = mapping_file.parse('Country Mapping')\n",
+    "\n",
+    "# Step 2: Add 'Classification' to Output File\n",
+    "output_file = output_file.merge(gr_mapping[['Role Type', 'Classification']], on='Role Type', how='left')\n",
+    "\n",
+    "# Step 3: Add 'Classification' to Input File\n",
+    "input_file = input_file.merge(anaplan_mapping[['Position class', 'Classification']], left_on='Role Type', right_on='Position class', how='left')\n",
+    "\n",
+    "# Step 4: Add 'Country' to Input File based on 'Country R3'\n",
+    "input_file = input_file.merge(country_mapping[['Country R3', 'Country']], on='Country R3', how='left')\n",
+    "\n",
+    "# Step 5: Add 'RTN Code' from OSPD file\n",
+    "input_file = input_file.merge(ospd_file[['L4_BF_Description', 'L4_BF_ID']], left_on='Business Framework', right_on='L4_BF_Description', how='left')\n",
+    "input_file.rename(columns={'L4_BF_ID': 'RTN Code'}, inplace=True)\n",
+    "\n",
+    "# Step 6: Create Unique Key for Input File\n",
+    "input_file['Unique Key'] = input_file['Classification'] + ' ' + input_file['RTN Code'] + ' ' + input_file['Country']\n",
+    "\n",
+    "# Step 7: Create Unique Key for Output File\n",
+    "output_file['Unique Key'] = output_file['Classification'] + ' ' + output_file['RTN Code L4'] + ' ' + output_file['Country']\n",
+    "\n",
+    "# Step 8: Create Secondary Keys\n",
+    "input_file['Secondary Key'] = input_file['RTN Code'] + ' ' + input_file['Country']\n",
+    "output_file['Secondary Key'] = output_file['RTN Code L4'] + ' ' + output_file['Country']\n",
+    "\n",
+    "# Step 9: Lookup Data from Input to Output File\n",
+    "lookup_cols = ['Business Framework', 'Country', 'Classification']\n",
+    "out_cols = ['A_L4', 'A_Country', 'A_Role Type']\n",
+    "output_file[out_cols] = output_file[['Unique Key']].merge(input_file[['Unique Key'] + lookup_cols], on='Unique Key', how='left')[lookup_cols]\n",
+    "\n",
+    "# Step 10: Aggregate Cost & FTE based on Unique and Secondary Keys\n",
+    "agg_data = input_file.groupby('Unique Key').agg({'Cost': 'sum', 'FTE': 'sum'}).reset_index()\n",
+    "output_file = output_file.merge(agg_data, on='Unique Key', how='left').rename(columns={'Cost': 'A_DC', 'FTE': 'A_FTE'})\n",
+    "\n",
+    "# Aggregate for Secondary Key\n",
+    "agg_data_sec = input_file.groupby('Secondary Key').agg({'Cost': 'sum', 'FTE': 'sum'}).reset_index()\n",
+    "output_file = output_file.merge(agg_data_sec, on='Secondary Key', how='left').rename(columns={'Cost': 'Total_DC', 'FTE': 'Total_FTE'})\n",
+    "\n",
+    "# Save the final processed Output File\n",
+    "output_file.to_excel('Processed_Output.xlsx', index=False)\n",
+    "\n",
+    "print(\"Processing completed. Output saved as 'Processed_Output.xlsx'\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "13df3081",
    "metadata": {},
    "outputs": [],
