--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ce3325e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load your data\n",
+    "# df_cms = pd.read_excel(\"your_file.xlsx\", sheet_name=\"Headcount Employee Detail\")\n",
+    "# df_finance = pd.read_excel(\"your_file.xlsx\", sheet_name=\"Finance\")\n",
+    "\n",
+    "# Step 1: Save `cms_df` with extra columns to a separate sheet\n",
+    "cms_df.to_excel(\"JML_Report.xlsx\", sheet_name=\"CMS_Details\", index=False)\n",
+    "\n",
+    "# Step 2: Remove extra columns before concatenating\n",
+    "check_cols = [col for col in cms_df.columns if col.startswith(\"Check\") or col.startswith(\"Manager\")]\n",
+    "cms_df_cleaned = cms_df.drop(columns=check_cols, errors=\"ignore\")\n",
+    "\n",
+    "# Step 3: Ensure both dataframes have the same column structure\n",
+    "cms_df_cleaned = cms_df_cleaned[df_finance.columns]  # Reorder columns\n",
+    "\n",
+    "# Step 4: Reset index and ensure index types match\n",
+    "cms_df_cleaned = cms_df_cleaned.reset_index(drop=True)\n",
+    "df_finance = df_finance.reset_index(drop=True)\n",
+    "\n",
+    "# Step 5: Convert index types to be the same\n",
+    "cms_df_cleaned.index = cms_df_cleaned.index.astype(int)\n",
+    "df_finance.index = df_finance.index.astype(int)\n",
+    "\n",
+    "# Step 6: Concatenate dataframes\n",
+    "final_df = pd.concat([df_finance, cms_df_cleaned], ignore_index=True)\n",
+    "\n",
+    "# Step 7: Save the final output\n",
+    "final_df.to_excel(\"JML_Report.xlsx\", sheet_name=\"JML Report\", index=False)\n",
+    "\n",
+    "print(\"✅ Process completed successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fc5dc75f",
    "metadata": {},
    "outputs": [],
