--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,41 +3,83 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce3325e5",
+   "id": "c427fde5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
     "\n",
-    "# Load your data\n",
-    "# df_cms = pd.read_excel(\"your_file.xlsx\", sheet_name=\"Headcount Employee Detail\")\n",
-    "# df_finance = pd.read_excel(\"your_file.xlsx\", sheet_name=\"Finance\")\n",
+    "# Define input/output paths\n",
+    "input_folder = \"Input\"\n",
+    "output_file = \"JML_Report.xlsx\"\n",
+    "input_file = os.path.join(input_folder, \"your_excel_file.xlsx\")  # Update your filename here\n",
     "\n",
-    "# Step 1: Save `cms_df` with extra columns to a separate sheet\n",
-    "cms_df.to_excel(\"JML_Report.xlsx\", sheet_name=\"CMS_Details\", index=False)\n",
+    "# Load Excel file\n",
+    "df = pd.read_excel(input_file, sheet_name=\"Headcount Employee Detail\", dtype=str)\n",
     "\n",
-    "# Step 2: Remove extra columns before concatenating\n",
-    "check_cols = [col for col in cms_df.columns if col.startswith(\"Check\") or col.startswith(\"Manager\")]\n",
-    "cms_df_cleaned = cms_df.drop(columns=check_cols, errors=\"ignore\")\n",
+    "# Step 1: Convert required columns to string (for lookup consistency)\n",
+    "df[\"Employee ID\"] = df[\"Employee ID\"].astype(str)\n",
+    "df[\"Entity Manager Employee ID\"] = df[\"Entity Manager Employee ID\"].astype(str)\n",
+    "df[\"Functional Manager Employee ID\"] = df[\"Functional Manager Employee ID\"].astype(str)\n",
+    "df[\"BF Level 2 Name\"] = df[\"BF Level 2 Name\"].astype(str)\n",
     "\n",
-    "# Step 3: Ensure both dataframes have the same column structure\n",
-    "cms_df_cleaned = cms_df_cleaned[df_finance.columns]  # Reorder columns\n",
+    "# Step 2: Filter for 'Central Managed Services'\n",
+    "df_cms = df[df[\"BF Level 2 Name\"] == \"Central Managed Services\"].copy()\n",
     "\n",
-    "# Step 4: Reset index and ensure index types match\n",
+    "# Initialize columns for tracking hierarchy\n",
+    "for i in range(1, 6):  # Up to 5 levels\n",
+    "    df_cms[f\"Manager{i}\"] = \"\"\n",
+    "    df_cms[f\"Check{i}\"] = \"\"\n",
+    "\n",
+    "# Function to find Manager Hierarchy and BF Level\n",
+    "def track_manager_hierarchy(emp_id, level=1, max_level=5):\n",
+    "    if level > max_level or emp_id not in df.index:\n",
+    "        return None, None\n",
+    "    manager_id = df.loc[emp_id, \"Functional Manager Employee ID\"]\n",
+    "    bf_level = df.loc[emp_id, \"BF Level 2 Name\"]\n",
+    "    return manager_id, bf_level\n",
+    "\n",
+    "# Step 3: Iterate for each employee and get hierarchy details\n",
+    "for index, row in df_cms.iterrows():\n",
+    "    emp_id = row[\"Employee ID\"]\n",
+    "    for level in range(1, 6):\n",
+    "        manager_id, bf_level = track_manager_hierarchy(emp_id, level)\n",
+    "        if manager_id:\n",
+    "            df_cms.at[index, f\"Manager{level}\"] = manager_id\n",
+    "        if bf_level:\n",
+    "            df_cms.at[index, f\"Check{level}\"] = bf_level\n",
+    "        emp_id = manager_id  # Move up the hierarchy\n",
+    "\n",
+    "# Step 4: Identify rows where any \"Check\" column has 'Finance'\n",
+    "check_cols = [f\"Check{i}\" for i in range(1, 6)]\n",
+    "df_cms[\"Updated BF Level2\"] = df_cms[check_cols].apply(lambda x: \"CMS Finance\" if \"Finance\" in x.values else \"\", axis=1)\n",
+    "\n",
+    "# Step 5: Filter rows where 'Updated BF Level2' is 'CMS Finance'\n",
+    "cms_df = df_cms[df_cms[\"Updated BF Level2\"] == \"CMS Finance\"].copy()\n",
+    "\n",
+    "# Step 6: Read original sheet again for Finance rows\n",
+    "df_finance = df[df[\"BF Level 2 Name\"] == \"Finance\"].copy()\n",
+    "df_finance[\"Updated BF Level2\"] = \"Finance\"\n",
+    "\n",
+    "# Step 7: Save `cms_df` separately (it contains extra columns)\n",
+    "cms_df.to_excel(output_file, sheet_name=\"CMS_Details\", index=False)\n",
+    "\n",
+    "# Step 8: Remove extra columns before appending to `df_finance`\n",
+    "cms_df_cleaned = cms_df[df_finance.columns]\n",
+    "\n",
+    "# Step 9: Reset index types for proper concatenation\n",
     "cms_df_cleaned = cms_df_cleaned.reset_index(drop=True)\n",
     "df_finance = df_finance.reset_index(drop=True)\n",
     "\n",
-    "# Step 5: Convert index types to be the same\n",
-    "cms_df_cleaned.index = cms_df_cleaned.index.astype(int)\n",
-    "df_finance.index = df_finance.index.astype(int)\n",
-    "\n",
-    "# Step 6: Concatenate dataframes\n",
+    "# Step 10: Concatenate cleaned `cms_df` with `df_finance`\n",
     "final_df = pd.concat([df_finance, cms_df_cleaned], ignore_index=True)\n",
     "\n",
-    "# Step 7: Save the final output\n",
-    "final_df.to_excel(\"JML_Report.xlsx\", sheet_name=\"JML Report\", index=False)\n",
+    "# Step 11: Save the final output\n",
+    "with pd.ExcelWriter(output_file, engine=\"xlsxwriter\") as writer:\n",
+    "    final_df.to_excel(writer, sheet_name=\"JML Report\", index=False)\n",
     "\n",
-    "print(\"✅ Process completed successfully!\")\n"
+    "print(\"✅ Process completed successfully! The final file is saved as:\", output_file)\n"
    ]
   },
   {
