--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c427fde5",
+   "id": "6236f2c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,18 +13,20 @@
     "# Define input/output paths\n",
     "input_folder = \"Input\"\n",
     "output_file = \"JML_Report.xlsx\"\n",
-    "input_file = os.path.join(input_folder, \"your_excel_file.xlsx\")  # Update your filename here\n",
+    "input_file = os.path.join(input_folder, \"your_excel_file.xlsx\")  # Update your filename\n",
     "\n",
     "# Load Excel file\n",
     "df = pd.read_excel(input_file, sheet_name=\"Headcount Employee Detail\", dtype=str)\n",
     "\n",
-    "# Step 1: Convert required columns to string (for lookup consistency)\n",
+    "# Convert required columns to string for lookups\n",
     "df[\"Employee ID\"] = df[\"Employee ID\"].astype(str)\n",
-    "df[\"Entity Manager Employee ID\"] = df[\"Entity Manager Employee ID\"].astype(str)\n",
     "df[\"Functional Manager Employee ID\"] = df[\"Functional Manager Employee ID\"].astype(str)\n",
     "df[\"BF Level 2 Name\"] = df[\"BF Level 2 Name\"].astype(str)\n",
     "\n",
-    "# Step 2: Filter for 'Central Managed Services'\n",
+    "# Create a lookup dictionary for quick access\n",
+    "lookup_dict = df.set_index(\"Employee ID\")[[\"Functional Manager Employee ID\", \"BF Level 2 Name\"]].to_dict(\"index\")\n",
+    "\n",
+    "# Step 1: Filter for 'Central Managed Services' employees\n",
     "df_cms = df[df[\"BF Level 2 Name\"] == \"Central Managed Services\"].copy()\n",
     "\n",
     "# Initialize columns for tracking hierarchy\n",
@@ -32,51 +34,61 @@
     "    df_cms[f\"Manager{i}\"] = \"\"\n",
     "    df_cms[f\"Check{i}\"] = \"\"\n",
     "\n",
-    "# Function to find Manager Hierarchy and BF Level\n",
+    "# Function to recursively fetch Functional Manager and BF Level\n",
     "def track_manager_hierarchy(emp_id, level=1, max_level=5):\n",
-    "    if level > max_level or emp_id not in df.index:\n",
-    "        return None, None\n",
-    "    manager_id = df.loc[emp_id, \"Functional Manager Employee ID\"]\n",
-    "    bf_level = df.loc[emp_id, \"BF Level 2 Name\"]\n",
-    "    return manager_id, bf_level\n",
+    "    managers = []\n",
+    "    bf_levels = []\n",
+    "    \n",
+    "    for i in range(1, max_level + 1):\n",
+    "        manager_id = lookup_dict.get(emp_id, {}).get(\"Functional Manager Employee ID\")\n",
+    "        bf_level = lookup_dict.get(emp_id, {}).get(\"BF Level 2 Name\")\n",
     "\n",
-    "# Step 3: Iterate for each employee and get hierarchy details\n",
+    "        if not manager_id or pd.isna(manager_id):\n",
+    "            break  # Stop if no manager exists\n",
+    "        \n",
+    "        managers.append(manager_id)\n",
+    "        bf_levels.append(bf_level)\n",
+    "\n",
+    "        # Move to the next level (next manager)\n",
+    "        emp_id = manager_id  \n",
+    "\n",
+    "    return managers, bf_levels\n",
+    "\n",
+    "# Step 2: Iterate over each employee and fetch hierarchy details\n",
     "for index, row in df_cms.iterrows():\n",
     "    emp_id = row[\"Employee ID\"]\n",
-    "    for level in range(1, 6):\n",
-    "        manager_id, bf_level = track_manager_hierarchy(emp_id, level)\n",
-    "        if manager_id:\n",
-    "            df_cms.at[index, f\"Manager{level}\"] = manager_id\n",
-    "        if bf_level:\n",
-    "            df_cms.at[index, f\"Check{level}\"] = bf_level\n",
-    "        emp_id = manager_id  # Move up the hierarchy\n",
+    "    managers, bf_levels = track_manager_hierarchy(emp_id, max_level=5)\n",
     "\n",
-    "# Step 4: Identify rows where any \"Check\" column has 'Finance'\n",
+    "    for i, (manager, bf_level) in enumerate(zip(managers, bf_levels), start=1):\n",
+    "        df_cms.at[index, f\"Manager{i}\"] = manager\n",
+    "        df_cms.at[index, f\"Check{i}\"] = bf_level\n",
+    "\n",
+    "# Step 3: Identify rows where any \"Check\" column has 'Finance'\n",
     "check_cols = [f\"Check{i}\" for i in range(1, 6)]\n",
     "df_cms[\"Updated BF Level2\"] = df_cms[check_cols].apply(lambda x: \"CMS Finance\" if \"Finance\" in x.values else \"\", axis=1)\n",
     "\n",
-    "# Step 5: Filter rows where 'Updated BF Level2' is 'CMS Finance'\n",
+    "# Step 4: Filter rows where 'Updated BF Level2' is 'CMS Finance'\n",
     "cms_df = df_cms[df_cms[\"Updated BF Level2\"] == \"CMS Finance\"].copy()\n",
     "\n",
-    "# Step 6: Read original sheet again for Finance rows\n",
+    "# Step 5: Read original sheet again for Finance rows\n",
     "df_finance = df[df[\"BF Level 2 Name\"] == \"Finance\"].copy()\n",
     "df_finance[\"Updated BF Level2\"] = \"Finance\"\n",
     "\n",
-    "# Step 7: Save `cms_df` separately (it contains extra columns)\n",
-    "cms_df.to_excel(output_file, sheet_name=\"CMS_Details\", index=False)\n",
-    "\n",
-    "# Step 8: Remove extra columns before appending to `df_finance`\n",
-    "cms_df_cleaned = cms_df[df_finance.columns]\n",
-    "\n",
-    "# Step 9: Reset index types for proper concatenation\n",
-    "cms_df_cleaned = cms_df_cleaned.reset_index(drop=True)\n",
-    "df_finance = df_finance.reset_index(drop=True)\n",
-    "\n",
-    "# Step 10: Concatenate cleaned `cms_df` with `df_finance`\n",
-    "final_df = pd.concat([df_finance, cms_df_cleaned], ignore_index=True)\n",
-    "\n",
-    "# Step 11: Save the final output\n",
+    "# Step 6: Save `cms_df` separately in `CMS_Details`\n",
     "with pd.ExcelWriter(output_file, engine=\"xlsxwriter\") as writer:\n",
+    "    cms_df.to_excel(writer, sheet_name=\"CMS_Details\", index=False)  # Save CMS details separately\n",
+    "\n",
+    "    # Step 7: Remove extra columns before appending to `df_finance`\n",
+    "    cms_df_cleaned = cms_df[df_finance.columns]\n",
+    "\n",
+    "    # Step 8: Reset index types for proper concatenation\n",
+    "    cms_df_cleaned = cms_df_cleaned.reset_index(drop=True)\n",
+    "    df_finance = df_finance.reset_index(drop=True)\n",
+    "\n",
+    "    # Step 9: Concatenate cleaned `cms_df` with `df_finance`\n",
+    "    final_df = pd.concat([df_finance, cms_df_cleaned], ignore_index=True)\n",
+    "\n",
+    "    # Step 10: Save the final `JML Report`\n",
     "    final_df.to_excel(writer, sheet_name=\"JML Report\", index=False)\n",
     "\n",
     "print(\"✅ Process completed successfully! The final file is saved as:\", output_file)\n"
