--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6236f2c7",
+   "id": "9100eb92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "    df_cms[f\"Check{i}\"] = \"\"\n",
     "\n",
     "# Function to recursively fetch Functional Manager and BF Level\n",
-    "def track_manager_hierarchy(emp_id, level=1, max_level=5):\n",
+    "def track_manager_hierarchy(emp_id, max_level=5):\n",
     "    managers = []\n",
     "    bf_levels = []\n",
     "    \n",
@@ -67,16 +67,16 @@
     "check_cols = [f\"Check{i}\" for i in range(1, 6)]\n",
     "df_cms[\"Updated BF Level2\"] = df_cms[check_cols].apply(lambda x: \"CMS Finance\" if \"Finance\" in x.values else \"\", axis=1)\n",
     "\n",
-    "# Step 4: Filter rows where 'Updated BF Level2' is 'CMS Finance'\n",
-    "cms_df = df_cms[df_cms[\"Updated BF Level2\"] == \"CMS Finance\"].copy()\n",
-    "\n",
-    "# Step 5: Read original sheet again for Finance rows\n",
-    "df_finance = df[df[\"BF Level 2 Name\"] == \"Finance\"].copy()\n",
-    "df_finance[\"Updated BF Level2\"] = \"Finance\"\n",
-    "\n",
-    "# Step 6: Save `cms_df` separately in `CMS_Details`\n",
+    "# Step 4: Save full df_cms (with all original + Check/Manager columns) in \"CMS_Details\"\n",
     "with pd.ExcelWriter(output_file, engine=\"xlsxwriter\") as writer:\n",
-    "    cms_df.to_excel(writer, sheet_name=\"CMS_Details\", index=False)  # Save CMS details separately\n",
+    "    df_cms.to_excel(writer, sheet_name=\"CMS_Details\", index=False)  # Save full CMS details for reference\n",
+    "\n",
+    "    # Step 5: Filter rows where 'Updated BF Level2' is 'CMS Finance'\n",
+    "    cms_df = df_cms[df_cms[\"Updated BF Level2\"] == \"CMS Finance\"].copy()\n",
+    "\n",
+    "    # Step 6: Read original sheet again for Finance rows\n",
+    "    df_finance = df[df[\"BF Level 2 Name\"] == \"Finance\"].copy()\n",
+    "    df_finance[\"Updated BF Level2\"] = \"Finance\"\n",
     "\n",
     "    # Step 7: Remove extra columns before appending to `df_finance`\n",
     "    cms_df_cleaned = cms_df[df_finance.columns]\n",
