--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,83 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2f009f4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import time\n",
+    "import pandas as pd\n",
+    "from openpyxl import load_workbook\n",
+    "import win32com.client as win32\n",
+    "\n",
+    "# Paths (Update these paths)\n",
+    "input_file = r\"C:\\Path\\To\\Reportnames.xlsx\"\n",
+    "target_file = r\"C:\\Path\\To\\TargetWorkbook.xlsx\"\n",
+    "output_folder = r\"C:\\Path\\To\\OutputFolder\"\n",
+    "\n",
+    "# Ensure output folder exists\n",
+    "if not os.path.exists(output_folder):\n",
+    "    os.makedirs(output_folder)\n",
+    "\n",
+    "# Load input data\n",
+    "df = pd.read_excel(input_file, usecols=[\"RTN CODE CHILD\", \"Report Name\"])\n",
+    "\n",
+    "# Open Excel Application (COM Object for Refreshing)\n",
+    "excel = win32.Dispatch(\"Excel.Application\")\n",
+    "excel.Visible = False  # Run in background\n",
+    "\n",
+    "# Loop through each row in input file\n",
+    "for index, row in df.iterrows():\n",
+    "    RTN = row[\"RTN CODE CHILD\"]\n",
+    "    ReportName = row[\"Report Name\"]\n",
+    "\n",
+    "    if pd.isna(RTN) or pd.isna(ReportName):  # Skip empty rows\n",
+    "        continue\n",
+    "\n",
+    "    # Open target workbook\n",
+    "    wb = excel.Workbooks.Open(target_file)\n",
+    "    ws = wb.Sheets(\"Setup\")\n",
+    "\n",
+    "    # Paste values\n",
+    "    ws.Range(\"D3\").Value = RTN\n",
+    "    ws.Range(\"D4\").Value = ReportName\n",
+    "\n",
+    "    # Refresh all external data\n",
+    "    wb.RefreshAll()\n",
+    "    time.sleep(5)  # Give some time for refresh\n",
+    "\n",
+    "    # Save a temporary copy\n",
+    "    temp_copy_path = os.path.join(output_folder, \"Temp_Copy.xlsx\")\n",
+    "    wb.SaveCopyAs(temp_copy_path)\n",
+    "\n",
+    "    # Open the copied workbook to replace formulas with values\n",
+    "    copy_wb = load_workbook(temp_copy_path)\n",
+    "    \n",
+    "    for sheet in copy_wb.sheetnames:\n",
+    "        ws = copy_wb[sheet]\n",
+    "        for row in ws.iter_rows():\n",
+    "            for cell in row:\n",
+    "                cell.value = cell.value  # Replace formula with value\n",
+    "\n",
+    "    # Save the final workbook with ReportName.xlsx\n",
+    "    final_name = f\"{ReportName}.xlsx\"\n",
+    "    final_path = os.path.join(output_folder, final_name)\n",
+    "    copy_wb.save(final_path)\n",
+    "\n",
+    "    # Close workbooks\n",
+    "    copy_wb.close()\n",
+    "    wb.Close(SaveChanges=False)\n",
+    "\n",
+    "# Quit Excel\n",
+    "excel.Quit()\n",
+    "\n",
+    "print(\"Process completed successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9100eb92",
    "metadata": {},
    "outputs": [],
